#3 fixed not working on iphone

--- a/website/src/assets/css/style.css
+++ b/website/src/assets/css/style.css
@@ -189,7 +189,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("/assets/img/hero-bg.png") fixed bottom center;
+  background: url("../img/hero-bg.png") bottom center;
   background-size: cover;
 }
 #hero:before {
@@ -226,6 +226,11 @@ h1, h2, h3, h4, h5, h6 {
   padding-bottom: 4px;
   letter-spacing: 1px;
   border-bottom: 3px solid #f5ac77;
+}
+@media (min-width: 1024px) {
+  #hero {
+    background-attachment: fixed;
+  }
 }
 @media (max-width: 768px) {
   #hero h1 {
